# agent-team-workflow

./: .gitignore  CLAUDE.md  DESIGN.md  DESIGN_v2.md  DISCUSSION.md  README.md  TASKS.md  pyproject.toml
.claude/agent-memory/architect/: MEMORY.md
.claude/agent-memory/qa_engineer/: MEMORY.md
.claude/agent-memory/tdd_focused_engineer/: MEMORY.md
.github/workflows/: pr-checks.yml
agent-definitions/: architect.md  database_architect.md  developer.md  eng_manager.md  performance_engineer.md  pm.md  qa_engineer.md  security_engineer.md  tdd_focused_engineer.md
agent-instructions/: CLAUDE.md
agent_design/: __init__.py  config.py  discussion.py  feature_extractor 2.py  feature_extractor.py  git_ops 2.py  git_ops.py  launcher.py  prompts.py  state.py
agent_design/agents/: __init__.py  base.py  claude_agent.py  configs.py  types.py
agent_design/cli/: __init__.py  main.py
agent_design/cli/commands/: apply_proposal.py  apply_suggestion.py  checkpoints.py  close.py  continue_.py  diff 2.py  diff.py  feedback 2.py  feedback.py  fix_ci.py  impl 2.py  impl.py  init.py  next_round 2.py  next_round.py  refresh_domain.py  remember.py  resume.py  retro.py  review_feedback.py  review_proposal.py  rollback.py  status.py
agent_design/github_ops/: __init__.py  base.py  operations.py  types.py
docs/: DESIGN 2.md  DESIGN.md  DESIGN_V2.md
plugins/core/: CLAUDE.md
plugins/core/agents/: architect.md  database_architect.md  developer.md  eng_manager.md  performance_engineer.md  pm.md  qa_engineer.md  retrospective_facilitator.md  security_engineer.md  sre.md  tdd_focused_engineer.md  technical_writer.md
plugins/core/memory/: agent_systems_expert.md  architect.md  claude_expert.md  developer.md  tdd_focused_engineer.md
plugins/local/: CLAUDE.md
plugins/local/agents/: agent_systems_expert.md  claude_expert.md
scripts/: autofix.sh  lint.sh  pre-commit.sh  pre-push 2.sh  setup.sh  test.sh
scripts/hooks/: task_completed.sh  teammate_idle.sh
tests/: test_agent_prompt_assessment.py  test_apply_proposal.py  test_apply_suggestion 2.py  test_apply_suggestion.py  test_continue 2.py  test_continue.py  test_feature_extractor 2.py  test_feature_extractor.py  test_fix_ci.py  test_hooks.py  test_launcher.py  test_prompts.py  test_refresh_domain.py  test_remember.py  test_retro.py  test_retrospective_facilitator.py  test_review_feedback.py  test_review_proposal.py  test_specialist_agents 2.py  test_specialist_agents.py  test_state.py
tests/test_github_ops/: conftest.py  fakes.py  test_ac_sign_in_shadows.py  test_comment_tracking_integration.py  test_git_operations.py  test_github_api_operations.py  test_remote_url_parsing.py
