[project]
name = "agent-design"
version = "0.1.0"
description = "Multi-agent design workflow tool for Claude Code"
authors = [{name = "Mark Striebeck"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
agent-design = "agent_design.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_design"]
